--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     </style>
   </head>
   <body>
-  <div id="threeCanvas" style="position:absolute; top:0; left:0; width:100vw; height:100vh;"></div>
+  <canvas id="threeCanvas" style="position:absolute; top:0; left:0; width:100vw; height:100vh; z-index=100"></canvas>
+  <div id="phaserContainer" style="
+      width:100%;
+      position:absolute;
+      top:0;
+      left:0;
+     z-index:-5;
+    "></div>
   </body>
 </html>
