--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <body>
   <canvas id="threeCanvas" style="position:absolute; top:0; left:0; width:100vw; height:100vh; z-index=100"></canvas>
   <div id="phaserContainer" style="
-      width:100%;
+      width:100vw;
       position:absolute;
       top:0;
       left:0;
-     z-index:5;
+     z-index:-5;
     "></div>
   </body>
 </html>
