--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
       body {
         margin:0;
         padding:0;
+        background:black;
       }
     </style>
   </head>
   <body>
+  <!--
   <canvas id="threeCanvas" style="position:absolute; top:0; left:0; width:100vw; height:100vh; z-index=100"></canvas>
+  
+  -->
   <div id="phaserContainer" style="
       width:100vw;
       position:absolute;
       top:0;
       left:0;
      z-index:5;
+      
     "></div>
+  
   </body>
 </html>
